sass/elements/_elements.scss
html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*:before,
*:after {
  /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
  box-sizing: inherit;
}

body {
  background: $color__background-body;
  // background-image: linear-gradient(
  //   $color__background-body-2,
  //   $color__background-body 70%
  // );
  font-size: calc(1rem + (#{$scale-value} * 3));
  //font-size: calc(16px + 6 * ((100vw - 320px) / 680));
}

// Create page margins
.site-header {
  padding: 0 $rl-site-margin;
}

.site-content {
  padding: 0 $rl-site-margin 5rem $rl-site-margin;
  overflow-x: hidden; // prevent scrollbars on search form hover

  @media screen and (max-width: 1024px) {
    padding-bottom: 0;
  }
}

.site-info {
  padding: 0 calc(4.5rem + #{$scale-value});
}

.newsletter {
  margin-left: $rl-site-margin;
  margin-right: $rl-site-margin;
}

@media screen and (max-width: 500px) {
  .site-header {
    padding: 0 $rl-site-margin-small;
  }
  .site-content {
    padding: 1rem calc(0.5rem + 0.333vw);
  }
  .site-info {
    padding: 0 calc(4.5rem + #{$scale-value});
  }

  .newsletter {
    margin-left: 0;
    margin-right: 0;
  }
}

// Sticky footer
html,
body {
  height: 100%;
}
body {
  display: flex;
  flex-direction: column;
}
#page {
  flex: 1 0 auto;
}
.footer-bg {
  flex-shrink: 0;
  margin-bottom: -9px;
  width: 100%;
  display: block;
}

hr {
  background-color: $color__background-hr;
  border: 0;
  height: 1px;
  margin-bottom: 1.5em;
}

@import "lists";

img {
  height: auto; /* Make sure images are scaled correctly. */
  max-width: 100%; /* Adhere to container width. */
}

figure {
  margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
}

@import "tables";

// Full bleed
// https://hankchizljaw.com/wrote/creating-a-full-bleed-css-utility/
.full-bleed {
  width: 100vw;
  margin-left: 50%;
  transform: translateX(-50%);
}

.fade-img-40 {
  opacity: 40%;
}
.fade-img-50 {
  opacity: 50%;
}

.bg {
  background-repeat: no-repeat;
  background-size: contain;
  background-blend-mode: darken;
  background-color: $color__background-body;
  width: 100%;
  height: 100vh;

  &__contact {
    background-image: url("img/rooster.jpg");
  }
}

